# Daemon

./: Cargo.toml  README.md  default.nix
.github/workflows/: rust.yml
src/: main.rs  servers.rs
translations/: de.json  en.json
