[package]
name = "daemon"
version = "1.0.0"
authors = ["Pascal Dietrich <pascal.1.dietrich@hotmail.com>"]
edition = "2021"
description = "This is the gTerminals daemon, which allows you to run commands on your computer from gTerminal."
repository = "https://github.com/gTerminal-project/Daemon/"
license = "GPL-3.0"
keywords = ["command-line-utilities", "filesystem", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.4.0"
current_locale = "0.1.1"
dyn-fmt = "0.4.0"
keyring = "2.0.5"
r_i18n = "1.0.1"
rand = "0.8.5"
rouille = "3.6.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.105"
totp-rs = "5.2.0"
async-trait = "0.1"
anyhow = "1.0"
env_logger = "0.10"
tokio = { version = "1.17.0", features = [
    "io-util",
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "macros",
] }
log = "0.4"
russh = "0.38.0"
russh-keys = "0.38.0"
p256 = "0.13.2"
